@@ -4269,3 +4269,6 @@
 20121118 configure.ac: don't double check for zlib header (bug #3586255)
          (Sergio).
 20121122 sound.c: correct feedback in AY noise generator (Patrik Rak).
+20121122 pokefinder/{pokemem.[ch]},ui/gtk/pokemem.c,ui/widget/pokemem.c,
+         ui/win32/pokemem.c: fix presumed typo in pokemem_trainer_deactivate
+         (Fred).
